--- a/extensions-manifest.json
+++ b/extensions-manifest.json
@@ -1,4 +1,9 @@
 {
+  ">=0.11": {
+    "sns": {
+      "downloadUrl": "https://github.com/foo/bar"
+    }
+  },
   ">=0.12": {
     "sns": {
       "downloadUrl": "https://github.com/foo/bar"
