--- a/extensions-manifest.json
+++ b/extensions-manifest.json
@@ -1,5 +1,10 @@
 {
-  ">=0.11": {
+  "*": {
+    "sns": {
+      "downloadUrl": "https://github.com/foo/bar"
+    }
+  },
+  ">=0.12": {
     "sns": {
       "downloadUrl": "https://github.com/foo/bar"
     }
