--- a/extensions-manifest.json
+++ b/extensions-manifest.json
@@ -6,7 +6,7 @@
   },
   "=0": {
     "sns": {
-      "downloadUrl": "https://github.com/foo/bar"
+      "downloadUrl": "https://github.com/smallstepman/dfx-extensions/releases/download/wow/exa.zip"
     }
   },
   "=1": {
