--- a/sns/Cargo.toml
+++ b/sns/Cargo.toml
@@ -2,7 +2,9 @@
 name = "sns"
 version = "0.1.0"
 edition = "2021"
-
+description = "sns-cli wrapper"
+license = "as in sdk repo"
+repository = "https://github.com/dfinity/sdk"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
