--- a/sns/Cargo.toml
+++ b/sns/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "sns"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "sns-cli wrapper"
-license = "as in sdk repo"
+license = "Apache-2.0"
 repository = "https://github.com/dfinity/sdk"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
