changes to Cargo.tomls (taking advantage of `workspace.package` feature)

--- a/sns/Cargo.toml
+++ b/sns/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "sns"
 version = "0.1.1"
-edition = "2021"
 description = "sns-cli wrapper"
-license = "Apache-2.0"
-repository = "https://github.com/dfinity/sdk"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+publish.workspace = true
+repository.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
