--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,13 @@ members = [
     "nns",
 ]
 
+[workspace.package]
+authors = ["DFINITY Team"]
+publish = false
+edition = "2021"
+license = "Apache-2.0"
+repository = "https://github.com/dfinity/dfx-extensions"
+
 [workspace.dependencies]
 dfx-core = "0.0.1"
 # dfx-core = { git = "https://github.com/dfinity/sdk", rev = "7d6a2c7" }
@@ -17,7 +24,7 @@ rust-toolchain-version = "1.65.0"
 # CI backends to support (see 'cargo dist generate-ci')
 ci = ["github"]
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
+targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
