--- a/nns/Cargo.toml
+++ b/nns/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "nns"
 version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+publish.workspace = true
+repository.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
