--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ members = [
 
 [workspace.package]
 authors = ["DFINITY Team"]
-publish = true
+# do not publish to crates.io
+publish = false
 edition = "2021"
 license = "Apache-2.0"
 repository = "https://github.com/dfinity/dfx-extensions"
@@ -25,6 +26,8 @@ rust-toolchain-version = "1.65.0"
 ci = ["github"]
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
+# Specifies whether cargo-dist should ignore this package (it shouldn't). Overrides publish=false
+dist = true
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
