--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,10 @@ lto = "thin"
 [workspace.metadata.release]
 # do not publish to crates.io
 publish = false
+pre-release-replacements = [
+  {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} ,
+  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
+  # {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
+  # {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
+  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
+]
